pkl-core/src/test/files/LanguageSnippetTests/input/errors/invalidGlobImport4.pkl
import* ".../input-helper/**.pkl" as invalidGlob

result = invalidGlob
